--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
 		<java.version>1.8</java.version>
 
 		<!--fabric8 info-->
+		<plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <version>2.19.1</version>
+                             <configuration>
+                            <testFailureIgnore>true</testFailureIgnore>
+                            </configuration>
+                        </plugin>
 		
 		<fabric8.version>2.3.4</fabric8.version>
 		<spring.k8s.bom.version>0.2.0.RELEASE</spring.k8s.bom.version>
